objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>Audience_Segment__c</fullName>
        <label>Audience Segment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Script__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CC Call Script</label>
        <referenceTo>CC_Call_Script__c</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Campaign_Code__c</fullName>
        <label>Campaign Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Created_Date__c</fullName>
        <label>Campaign Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Campaign_Name__c</fullName>
        <label>Campaign Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Originating_Sub_Theater__c</fullName>
        <description>MCP April Release 2015: To store campaign sub theatre</description>
        <label>Campaign Originating Sub Theater</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Originating_Theater__c</fullName>
        <label>Campaign Originating Theater</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Type__c</fullName>
        <description>MCP April Release 2015: To store campaign type</description>
        <label>Campaign Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_source__c</fullName>
        <label>Campaign source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cisco_Priority_Area__c</fullName>
        <label>Cisco Priority Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Communication_Delivery_Channel__c</fullName>
        <label>Communication Delivery Channel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Source__c</fullName>
        <label>Data Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eloqua_Campaign_Id__c</fullName>
        <description>MCP April Release 2015:  To store Eloqua System Generated Id</description>
        <label>Eloqua Campaign Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Elq_Campaign_Created_by__c</fullName>
        <description>MCP April Release 2015:  To store Eloqua Campaign Created by</description>
        <label>Elq Campaign Created by</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Funding_Source__c</fullName>
        <label>Funding Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GMP_Playname__c</fullName>
        <label>GMP Playname</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inbound_Call_Center__c</fullName>
        <label>Inbound Call Center</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maximum_No_Attempts__c</fullName>
        <defaultValue>3</defaultValue>
        <label>Maximum No Attempts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Offer_Architecture__c</fullName>
        <label>Offer Architecture</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offer_Code__c</fullName>
        <label>Offer Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offer_Description__c</fullName>
        <label>Offer Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Offer_Name__c</fullName>
        <label>Offer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offer_URL__c</fullName>
        <label>Offer URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outbound_Call_Center__c</fullName>
        <label>Outbound Call Center</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Account_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Account ID</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Campaigns1</relationshipLabel>
        <relationshipName>Campaigns1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Account_Name__c</fullName>
        <formula>Partner_Account_ID__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pre_Event_Call_Center__c</fullName>
        <label>Pre Event Call Center</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Offer_Type__c</fullName>
        <label>Offer Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Offer__c</fullName>
        <label>Primary Offer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Technology__c</fullName>
        <label>Primary Technology</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <description>User Story- 5251</description>
        <label>Priority</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <description>MCP April Release 2015: To store Targeting Product initiative in Eloqua</description>
        <label>Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Code__c</fullName>
        <label>Program Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_End_Date__c</fullName>
        <label>Program End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Program_Event_Code__c</fullName>
        <externalId>true</externalId>
        <label>Program Event Code</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Program_Event_Description__c</fullName>
        <label>Program Event Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Program_Event_End_Date__c</fullName>
        <label>Program Event End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Program_Event_Name_Link__c</fullName>
        <formula>HYPERLINK('/'+ Id,  Program_Event_Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Event Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Event_Name__c</fullName>
        <label>Program Event Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Event_Start_Date__c</fullName>
        <label>Program Event Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Program_Name__c</fullName>
        <label>Program Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Originating_Country__c</fullName>
        <label>Program Originating Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Start_Date__c</fullName>
        <label>Program Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Program_Updated_Date__c</fullName>
        <label>Program Updated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SFDC_Program_Event_Status__c</fullName>
        <label>SFDC Program Event Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Launch</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Theatre__c</fullName>
        <description>US5251 - Launching a program event</description>
        <label>Theatre</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vertical_Market__c</fullName>
        <label>Vertical Market</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <sharingModel>FullAccess</sharingModel>
    <listViews>
        <fullName>AllActiveCampaigns</fullName>
        <columns>Call_Script__c</columns>
        <columns>CAMPAIGN.NAME</columns>
        <columns>Program_Event_Code__c</columns>
        <columns>Maximum_No_Attempts__c</columns>
        <columns>Notes__c</columns>
        <columns>SFDC_Program_Event_Status__c</columns>
        <columns>Priority__c</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>Outbound_Call_Center__c</columns>
        <columns>CAMPAIGN.ID</columns>
        <columns>Campaign_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>notContain</operation>
            <value>TEST</value>
        </filters>
        <label>All Active Campaigns</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Demo_2_Active_Campaign</fullName>
        <columns>Program_Event_Name_Link__c</columns>
        <columns>CAMPAIGN.NAME</columns>
        <columns>Program_Event_Code__c</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>Priority__c</columns>
        <columns>Maximum_No_Attempts__c</columns>
        <columns>Program_Originating_Country__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.STATUS</field>
            <operation>equals</operation>
            <value>Launched</value>
        </filters>
        <label>Demo 2: Active Campaign</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Demo_2_All_Campaigns</fullName>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.NAME</columns>
        <columns>Program_Event_Code__c</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>Priority__c</columns>
        <columns>Maximum_No_Attempts__c</columns>
        <columns>Program_Originating_Country__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.STATUS</field>
            <operation>equals</operation>
            <value>Completed,Launched,Cancelled</value>
        </filters>
        <filters>
            <field>Program_Originating_Country__c</field>
            <operation>equals</operation>
            <value>LATAM</value>
        </filters>
        <label>Demo 2: All Campaigns</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Demo_2_Cancelled_Campaigns</fullName>
        <columns>Program_Event_Name_Link__c</columns>
        <columns>CAMPAIGN.NAME</columns>
        <columns>Program_Event_Code__c</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>Priority__c</columns>
        <columns>Maximum_No_Attempts__c</columns>
        <columns>Program_Originating_Country__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.STATUS</field>
            <operation>equals</operation>
            <value>Cancelled</value>
        </filters>
        <label>Demo 2: Cancelled Campaigns</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Demo_2_Completed_Campaigns</fullName>
        <columns>Program_Event_Name_Link__c</columns>
        <columns>CAMPAIGN.NAME</columns>
        <columns>Program_Event_Code__c</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>Priority__c</columns>
        <columns>Maximum_No_Attempts__c</columns>
        <columns>Program_Originating_Country__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.STATUS</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <label>Demo 2: Completed Campaigns</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MyActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Active Campaigns</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>NGCC_Global_Eloqua</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Campaign_source__c</field>
            <operation>equals</operation>
            <value>Global Eloqua</value>
        </filters>
        <label>@NGCC Global Eloqua</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>NGCC_My_Campaigns</fullName>
        <columns>Program_Event_Name_Link__c</columns>
        <columns>CAMPAIGN.NAME</columns>
        <columns>Program_Event_Code__c</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>Priority__c</columns>
        <columns>Maximum_No_Attempts__c</columns>
        <columns>Program_Originating_Country__c</columns>
        <columns>Call_Script__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.STATUS</field>
            <operation>equals</operation>
            <value>Completed,Launched,Cancelled</value>
        </filters>
        <filters>
            <field>Eloqua_Campaign_Id__c</field>
            <operation>equals</operation>
        </filters>
        <label>@NGCC: My Prog. Events</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>NGCC_My_Campaigns_Cancelled</fullName>
        <columns>Program_Event_Name_Link__c</columns>
        <columns>CAMPAIGN.NAME</columns>
        <columns>Program_Event_Code__c</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>Priority__c</columns>
        <columns>Maximum_No_Attempts__c</columns>
        <columns>Program_Originating_Country__c</columns>
        <columns>Call_Script__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.STATUS</field>
            <operation>equals</operation>
            <value>Cancelled</value>
        </filters>
        <filters>
            <field>Eloqua_Campaign_Id__c</field>
            <operation>equals</operation>
        </filters>
        <label>@NGCC: My Prog. Events - Cancelled</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>NGCC_My_Campaigns_Complete</fullName>
        <columns>Program_Event_Name_Link__c</columns>
        <columns>CAMPAIGN.NAME</columns>
        <columns>Program_Event_Code__c</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>Priority__c</columns>
        <columns>Maximum_No_Attempts__c</columns>
        <columns>Program_Originating_Country__c</columns>
        <columns>Call_Script__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.STATUS</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>Eloqua_Campaign_Id__c</field>
            <operation>equals</operation>
        </filters>
        <label>@NGCC: My Prog. Events - Complete</label>
        <language>en_US</language>
    </listViews>
    <validationRules>
        <fullName>NGCC_Campaign_Name_not_Editable</fullName>
        <active>true</active>
        <description>NGCC_Campaign_Name_Not_Editable</description>
        <errorConditionFormula>IF( OR(CONTAINS($Profile.Name,'Custom'),CONTAINS($Profile.Name,'Integration'),CONTAINS( $Profile.Name,'ADMIN')),false,IF(ISCHANGED(Name),True,False))</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>You can not change the Campaign</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NGCC_Validate_Fields_for_Launch_Program</fullName>
        <active>true</active>
        <description>Sprint 1 - User Story - 5251
Call Script and Maximum No Attempts fields are required if the Program is in Launch status.</description>
        <errorConditionFormula>IF(AND(ISPICKVAL(Status,'Launched'),
        OR(ISBLANK(Call_Script__c),
           ISBLANK(Maximum_No_Attempts__c))
   )
,true,false)</errorConditionFormula>
        <errorMessage>Call Script and Maximum No Attempts are required.  Please enter a value for the fields.</errorMessage>
    </validationRules>
</CustomObject>